fix: prevent overflow layout

--- a/src/styles/List.css
+++ b/src/styles/List.css
@@ -36,3 +36,7 @@
 .list__row__action {
     width: 100%;
 }
+
+.list__row__task {
+    overflow: hidden;
+}
